# everyones-video

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SKILL.md  SUPPORT.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  smoke_test.sh  workflow_eval.json
.claude-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  engine.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  ASR_COMPARISON.md  OPTIMIZATION.md  WORKFLOWS.md
examples/: README.md  demo_en.srt  demo_zh.srt
extension/: background.js  content.js  manifest.json  overlay.css  popup.html  popup.js
integration/: batch_pipeline.sh  common.py  eval.py  eval_quality.py  faster_whisper_run.py  funasr_run.py  pipeline.bat  pipeline.sh  realtime_server.py  reflect_fix.py  srt_utils.py  stepfun_to_srt.py  subtitle_quality.py  text_to_srt.py  tm.py  translate_srt.py  tts_dub.py
scripts/: make_demo.py
skills/: setup.sh
skills/wjs-burning-subtitles/: SKILL.md
skills/wjs-burning-subtitles/scripts/: render.py
skills/wjs-dubbing-video/: SKILL.md
skills/wjs-transcribing-audio/: SKILL.md
skills/wjs-transcribing-audio/scripts/: build_srt_from_asr.py
skills/wjs-translating-subtitles/: SKILL.md
skills/wjs-translating-subtitles/scripts/: translate.py
tests/: test_core.py  test_pipeline.py  test_realtime.py
